[metadata]
name = OWNd
version = 0.7.37
author = anotherjulien
license = GPLv3
license_file = LICENSE
url = https://github.com/anotherjulien/OWNd
author_email = yetanotherjulien@gmail.com
description = Python interface for the OpenWebNet protocol
long_description=file: README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    aiohttp
    pytz
    python_version >= "3.9"